--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@damunga/githistory",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "1.1.0",
+  "description": "A CLI tool to fetch high-level stats from a local Git repository.",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^5.3.0",
+    "moment": "^2.30.1",
     "simple-git": "^3.24.0"
   },
   "bin": {
