--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.3.0",
-    "moment": "^2.30.1",
-    "simple-git": "^3.24.0"
+    "chalk": "^5.3.0"
   },
   "bin": {
     "githistory": "./index.js"
