--- a/package.json
+++ b/package.json
@@ -1,18 +1,33 @@
 {
   "name": "@damunga/githistory",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "A CLI tool to fetch high-level stats from a local Git repository.",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node index.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "David Amunga",
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.3.0"
   },
   "bin": {
     "githistory": "./index.js"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DavidAmunga/githistory.git"
+  },
+   "keywords": [
+    "git",
+    "cli",
+    "statistics",
+    "git-stats",
+    "repository-analysis",
+    "version-control",
+    "developer-tools",
+    "git-history",
+    "commit-analysis",
+    "git-branches"
+  ] 
 }
